RESOLVED FIXED15077
REGRESSION: Cannot drag selected text out of a background window
https://bugs.webkit.org/show_bug.cgi?id=15077
Summary REGRESSION: Cannot drag selected text out of a background window
mitz
Reported 2007-08-25 11:47:21 PDT
EventHandler::eventMayStartDrag() is missing a conversion from window to contents coordinates, causing it to give false results. The only effect of that is that if you have a piece of selected text in a Safari window that's in the background, sometimes you cannot click-hold-and-drag the text out of the window. Instead, the window comes to the front right when you click it. Patch forthcoming.
Attachments
Add missing coordinate conversion (2.85 KB, patch)
2007-08-25 11:57 PDT, mitz
sam: review+
mitz
Comment 1 2007-08-25 11:57:50 PDT
Created attachment 16119 [details] Add missing coordinate conversion Includes change log and manual test
Mark Rowe (bdash)
Comment 2 2007-08-25 12:06:37 PDT
Mark Rowe (bdash)
Comment 3 2007-08-25 12:08:33 PDT
Landed in r25248.
Note You need to log in before you can comment on or make changes to this bug.