2007-08-25  Mitz Pettel  <mitz@webkit.org>

Reviewed by Sam Weinig.

        - fix http://bugs.webkit.org/show_bug.cgi?id=15077
          REGRESSION: Cannot drag selected text out of a background window

        * manual-tests/drag-out-of-background-window.html: Added.
        * page/EventHandler.cpp:
        (WebCore::EventHandler::eventMayStartDrag): Added missing coordinate
        conversion.


Canonical link: https://commits.webkit.org/19741@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@25248 268f45cc-cd09-0410-ab3c-d52691b4dbfc